bugfix: reg and small screen size header overlap

--- a/assets/style.css
+++ b/assets/style.css
@@ -1379,12 +1379,12 @@ video {
   display: grid;
 }
 
-.hidden {
-  display: none;
-}
-
 .\!hidden {
   display: none !important;
+}
+
+.hidden {
+  display: none;
 }
 
 .aspect-square {
@@ -1588,20 +1588,6 @@ video {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-@keyframes infinite-scroll {
-  from {
-    transform: translateX(450%);
-  }
-
-  to {
-    transform: translateX(-450%);
-  }
-}
-
-.animate-infinite-scroll {
-  animation: infinite-scroll 9s linear infinite;
 }
 
 @keyframes ping {
@@ -3138,6 +3124,22 @@ video {
 }
 
 @media (min-width: 320px) {
+  .sm\:mt-\[10\%\] {
+    margin-top: 10%;
+  }
+
+  .sm\:mt-\[12\%\] {
+    margin-top: 12%;
+  }
+
+  .sm\:mt-\[15\%\] {
+    margin-top: 15%;
+  }
+
+  .sm\:mt-\[20\%\] {
+    margin-top: 20%;
+  }
+
   .sm\:grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
@@ -3170,6 +3172,18 @@ video {
   .reg\:mx-\[5\%\] {
     margin-left: 5%;
     margin-right: 5%;
+  }
+
+  .reg\:mt-\[8\%\] {
+    margin-top: 8%;
+  }
+
+  .reg\:mt-\[10\%\] {
+    margin-top: 10%;
+  }
+
+  .reg\:mt-\[12\%\] {
+    margin-top: 12%;
   }
 
   .reg\:flex {
@@ -3408,10 +3422,6 @@ video {
 
   .lg\:mt-\[5\%\] {
     margin-top: 5%;
-  }
-
-  .lg\:h-\[40vh\] {
-    height: 40vh;
   }
 
   .lg\:h-\[45vh\] {
